# RAG-with-role-based-Authentication

./: .gitignore  main.py  pyproject.toml  requirements.txt  users.db
app/: Auth.py  Config.py  Database.py  Ingest.py  InitDB.py  MessageStore.py  Prompt.py  Retrieval.py
data/: development.docx  leave.txt
