[project]
name = "full-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "protobuf==3.20.3",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "streamlit-authenticator>=0.4.2",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
